--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Keep your token business elsewhere",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "test": "npm run build && mocha --exit"
   },
   "repository": {
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/rish-0-0/simple-token-service/issues"
   },
-  "homepage": "https://github.com/rish-0-0/simple-token-service#readme"
+  "homepage": "https://github.com/rish-0-0/simple-token-service#readme",
+  "devDependencies": {
+    "typescript": "^4.4.3"
+  }
 }
