--- a/package.json
+++ b/package.json
@@ -24,17 +24,23 @@
   },
   "homepage": "https://github.com/rish-0-0/simple-token-service#readme",
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.10.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "mocha": "^9.1.2",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "fastify": "^3.21.6"
+    "fastify": "^3.21.6",
+    "json-schema-to-ts": "^1.6.4",
+    "jsonwebtoken": "^8.5.1"
   }
 }
