--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Keep your token business elsewhere",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
+    "start": "node dist/index.js",
     "test": "npm run build && mocha --exit"
   },
   "repository": {
@@ -36,6 +37,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "mocha": "^9.1.2",
+    "rimraf": "^3.0.2",
     "typescript": "^4.4.3"
   },
   "dependencies": {
