--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Keep your token business elsewhere",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
+    "compile": "rimraf dist && tsc",
     "start": "node dist/index.js",
     "test": "npm run build && mocha --exit"
   },
