--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "fastify": "^3.21.6",
     "fastify-error": "^0.3.1",
+    "fastify-swagger": "^4.12.0",
     "google-auth-library": "^7.9.2",
     "json-schema-to-ts": "^1.6.4",
     "jsonwebtoken": "^8.5.1"
