--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "compile": "rimraf dist && tsc",
     "start": "node dist/src/index.js",
-    "test": "npm run build && mocha --exit"
+    "build:latest": "docker build -t simple-token-service:latest .",
+    "run:latest": "docker run --name token --env-file .env -p 4321:4321 simple-token-service:latest",
+    "test": "npm run compile && mocha --exit"
   },
   "repository": {
     "type": "git",
